[tool.poetry]
name = "tach"
version = "0.1.0"
description = "Time-domain Astrophysics Coordination Hub"
authors = ["Leo Singer <leo.singer@ligo.org>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
flask = "*"
lxml = "*"
psycopg2-binary = "*"
safrs = "*"
sqlalchemy-utils = "*"

[tool.poetry.dev-dependencies]
eralchemy = "*"
ipython = "*"

[tool.poetry.scripts]
tach = "tach:main"

[tool.poetry.plugins."flask.commands"]
createdb = "tach.cli:createdb"
erd = "tach.cli:erd"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
